Alterações no Layout Back Office

--- a/MasterMind/Views/Shared/_LayoutPadrao.cshtml
+++ b/MasterMind/Views/Shared/_LayoutPadrao.cshtml
@@ -12,6 +12,14 @@
         <script src="~/Scripts/BO/jquery.validate.unobtrusive.min.js"></script>
 
         <link href="~/Styles/backoffice.css" rel="stylesheet" />
+        <link href="~/Styles/bootstrap-responsive.min.css" rel="stylesheet" />
+        <link href="~/Styles/bootstrap.min.css" rel="stylesheet" />
+
+        <div class="cabecalho">
+            <div class="row">
+                <h1>MASTER MIND - Back Office</h1>
+            </div>
+        </div>
 
         <div class="conteudo">
             @RenderBody()
