--- a/MasterMind/Styles/backoffice.css
+++ b/MasterMind/Styles/backoffice.css
@@ -1,6 +1,25 @@
-﻿fieldset
+﻿body
+{
+    margin: 0 0 0 0;
+}
+
+table
+{
+    border-style: solid;
+    border-width: 1px;
+}
+table tr th, table tr td
+{
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-left-style: solid;
+    border-left-width: 1px;
+}
+
+fieldset
 {
     background-color: #c1bdbd;
+    padding: 5px 5px 5px 5px !important;
 }
 
 .display-label, .editor-label
@@ -20,4 +39,25 @@
 .msg-atencao
 {
     color: #f00;
+}
+
+.cabecalho
+{
+    background-color: #0019b1;
+}
+    .cabecalho h1
+    {
+        margin: 0 0 0 0;
+        color: #938c8c !important;
+        text-align: center;
+    }
+
+.conteudo
+{
+    margin: 0px 5px 0px 5px;
+}
+.conteudo h2
+{
+    border-bottom: inset;
+    margin-bottom: 5px;
 }
