--- a/MasterMind/Views/Temas/Edit.cshtml
+++ b/MasterMind/Views/Temas/Edit.cshtml
@@ -12,8 +12,6 @@
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>Temas</legend>
-
         <div class="editor-field">
             @Html.HiddenFor(model => model.Id_tema)
             @Html.ValidationMessageFor(model => model.Id_tema)
@@ -27,12 +25,9 @@
             @Html.ValidationMessageFor(model => model.Desc_tema)
         </div>
 
-        <p>
-            <input type="submit" value="Salvar" />
-        </p>
+        <div>
+            <input class="btn btn-primary" type="submit" value="Salvar" />
+            <input class="btn btn-primary" type="button" value ="Voltar" onclick="window.location.href='@Url.Action("Index", "Temas")'"/>
+        </div>
     </fieldset>
 }
-
-<div>
-    @Html.ActionLink("Voltar", "Index")
-</div>
