Alteração na Base de Dados, Criação das Telas Personagens, Temas , Perguntas e Respostas

--- a/MasterMind/Styles/backoffice.css
+++ b/MasterMind/Styles/backoffice.css
@@ -48,7 +48,7 @@ fieldset
     .cabecalho h1
     {
         margin: 0 0 0 0;
-        color: #938c8c !important;
+        color: #fff !important;
         text-align: center;
     }
 
