--- a/MasterMind/Views/Temas/Details.cshtml
+++ b/MasterMind/Views/Temas/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Infraestrutura.Repositorios.Entidades.Temas
 
 @{
-    ViewBag.Title = "Detail";
+    ViewBag.Title = "Temas - Detalhes";
     Layout = "~/Views/Shared/_LayoutPadrao.cshtml";
 }
 
