--- a/MasterMind/Views/Personagens/Delete.cshtml
+++ b/MasterMind/Views/Personagens/Delete.cshtml
@@ -16,12 +16,23 @@
         @Html.DisplayFor(model => model.Id_person)
     </div>
     <br />
+
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Desc_person)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Desc_person)
     </div>
+
+    <br />
+
+    <div class="display-label">
+         @Html.DisplayNameFor(model => model.Tema.Desc_tema)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Tema.Desc_tema)
+    </div>
+
 </fieldset>
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
