--- a/MasterMind/Views/Perguntas/List.cshtml
+++ b/MasterMind/Views/Perguntas/List.cshtml
@@ -17,8 +17,22 @@
         <th>
             @Html.DisplayNameFor(model => model.Txt_Perg)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tema.Desc_tema)
+        </th>
         <th>Ações</th>
     </tr>
+
+    @using (Html.BeginForm("List", "Perguntas", FormMethod.Get)) {
+        <div class="editor-label">
+            @Html.Label("Tema")
+            @Html.DropDownList("Id_tema", new SelectList(ViewBag.ListaTemas, "Id_tema", "Desc_tema"), new { @class = "dropdownlist" })
+            <br />
+            <input type="submit" value="Consultar" class="btn btn-info"/>
+        </div>
+
+            <br />
+    }
 
 @foreach (var item in Model) {
     <tr>
@@ -27,6 +41,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Txt_Perg)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Tema.Desc_tema)
         </td>
         <td>
             <input class="btn btn-primary" type="button" value ="Editar" onclick="window.location.href='@Url.Action("Edit", "Perguntas", new { Id = item.Id_Perg })'"/>
