Ajustes na diferença do Pull e merge com as alterações do Lucas - Framework 4.0

--- a/MasterMind/Views/Perguntas/Create.cshtml
+++ b/MasterMind/Views/Perguntas/Create.cshtml
@@ -79,7 +79,8 @@
     <br />
     <div>
         <input class="btn btn-primary" type="submit" value="Incluir" />
-        <input class="btn btn-primary" type="button" value ="Voltar" onclick="window.location.href='@Url.Action("Index", "Perguntas/List", new { @Id_tema=@Model.Tema.Id_tema } )    '"/>
+        <input class="btn btn-primary" type="button" value ="Voltar" onclick="window.location.href='@Url.Action("Index", "Perguntas")'"/>
+        @*<input class="btn btn-primary" type="button" value ="Voltar" onclick="window.location.href='@Url.Action("Index", "Perguntas/List", new { @Id_tema=@Model.Tema.Id_tema } )'"/>*@
     </div>
 }
 
