--- a/MasterMind/Views/Perguntas/Details.cshtml
+++ b/MasterMind/Views/Perguntas/Details.cshtml
@@ -84,5 +84,5 @@
 <br />
 <div>
     <input class="btn btn-primary" type="button" value ="Editar" onclick="window.location.href='@Url.Action("Edit", "Perguntas", new { Id = Model.Id_Perg })'"/>
-    <input class="btn btn-primary" type="button" value ="Voltar" onclick="window.location.href='@Url.Action("Index", "Perguntas/List", new { @Id_tema=@Model.Tema.Id_tema } )    '"/>
+    <input class="btn btn-primary" type="button" value ="Voltar" onclick="window.location.href='@Url.Action("Index", "Perguntas")'"/>
 </div>
