--- a/MasterMind/Views/Usuario/Form.cshtml
+++ b/MasterMind/Views/Usuario/Form.cshtml
@@ -12,7 +12,7 @@
             @Html.LabelFor(model => model.Nome)
         </div>
         <div class="editor-field">
-            @Html.TextBoxFor(model => model.Nome, new { tabindex=1})
+            @Html.TextBoxFor(model => model.Nome, new { tabindex = 1 })
             @Html.ValidationMessageFor(model => model.Nome)
         </div>
 
@@ -20,7 +20,7 @@
             @Html.LabelFor(model => model.Senha)
         </div>
         <div class="editor-field">
-            @Html.PasswordFor(model => model.Senha, new { tabindex=4})
+            @Html.PasswordFor(model => model.Senha, new { tabindex = 4 })
             @Html.ValidationMessageFor(model => model.Senha)
         </div>
 
@@ -28,7 +28,7 @@
             @Html.LabelFor(model => model.Cidade)
         </div>
         <div class="editor-field">
-            @Html.TextBoxFor(model => model.Cidade, new { tabindex=7})
+            @Html.TextBoxFor(model => model.Cidade, new { tabindex = 7 })
             @Html.ValidationMessageFor(model => model.Cidade)
         </div>
 
@@ -40,7 +40,7 @@
             @Html.LabelFor(model => model.Sobrenome)
         </div>
         <div class="editor-field">
-            @Html.TextBoxFor(model => model.Sobrenome, new { tabindex=2})
+            @Html.TextBoxFor(model => model.Sobrenome, new { tabindex = 2 })
             @Html.ValidationMessageFor(model => model.Sobrenome)
         </div>
 
@@ -48,7 +48,7 @@
             @Html.LabelFor(model => model.Dt_nasc)
         </div>
         <div class="editor-field">
-            @Html.TextBoxFor(model => model.Dt_nasc, new { tabindex=5})
+            @Html.TextBoxFor(model => model.Dt_nasc, new { tabindex = 5 })
             @Html.ValidationMessageFor(model => model.Dt_nasc)
         </div>
 
@@ -56,7 +56,7 @@
             @Html.LabelFor(model => model.Estado)
         </div>
         <div class="editor-field">
-            @Html.TextBoxFor(model => model.Estado, new { tabindex=8})
+            @Html.TextBoxFor(model => model.Estado, new { tabindex = 8 })
             @Html.ValidationMessageFor(model => model.Estado)
         </div>
 
@@ -68,13 +68,13 @@
             @Html.LabelFor(model => model.Email)
         </div>
         <div class="editor-field">
-            @Html.TextBoxFor(model => model.Email, new { tabindex=3 })
+            @Html.TextBoxFor(model => model.Email, new { tabindex = 3 })
             @Html.ValidationMessageFor(model => model.Email)
         </div>
 
         <div class="editor-label">
             @Html.Label("Sexo")
-            @Html.DropDownListFor(u => u.Sexo, new SelectList(ViewBag.ListaSexo, "Sigla", "Sexo"), new { @class = "dropdownlist", tabindex=6 })
+            @Html.DropDownListFor(u => u.Sexo, new SelectList(ViewBag.ListaSexo, "Sigla", "Sexo"), new { @class = "dropdownlist", tabindex = 6 })
             @Html.ValidationMessageFor(model => model.Sexo)
         </div>
 
@@ -83,8 +83,14 @@
             @Html.LabelFor(model => model.Pais)
         </div>
         <div class="editor-field">
-            @Html.TextBoxFor(model => model.Pais, new { tabindex=9})
+            @Html.TextBoxFor(model => model.Pais, new { tabindex = 9 })
             @Html.ValidationMessageFor(model => model.Pais)
+        </div>
+
+        <div class="editor-label">
+            @Html.Label("Perfil")
+            @Html.DropDownListFor(u => u.Id_perfil, new SelectList(ViewBag.ListaPerfil, "Id_Perfil", "descricao"), new { @class = "dropdownlist", tabindex = 10 })
+            @Html.ValidationMessageFor(model => model.Id_perfil)
         </div>
 
     </div>
