--- a/MasterMind/Views/Perguntas/List.cshtml
+++ b/MasterMind/Views/Perguntas/List.cshtml
@@ -20,6 +20,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Tema.Desc_tema)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Niveis.descricao)
+        </th>
         <th>Ações</th>
     </tr>
 
@@ -44,6 +47,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Tema.Desc_tema)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Niveis.descricao)
         </td>
         <td>
             <input class="btn btn-primary" type="button" value ="Editar" onclick="window.location.href='@Url.Action("Edit", "Perguntas", new { Id = item.Id_Perg })'"/>
